syntax = "proto3";

package greet;

option go_package="greetpb";

message Greeting{
    string firt_name = 1;
    string last_name = 2;
    
}

//unary request grpc
message GreetingRequest{
    Greeting greeting = 1;
}

message GreetingResponse{
    string result = 1;
}


//server stream grpc
message GreetManyTimesRequest{
    Greeting greeting = 1;
}

message GreetManyTimesResponse{
    string result = 1;
}


//server client streaming
message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

// bi direccional
message GreetEveryOneRequest{
    Greeting greeting = 1;
}

message GreetEveryOneResponse{
    string result = 1;
}

//deadlines
message WithDeadLineRequest{
    Greeting greeting = 1;
}

message WithDeadLineResponse{
    string result = 1;
}

service GreetService{
    //Unary
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};
    
    //Server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
    
    //Client streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
    
    // bi direccional stream
    rpc GreetEveryOne( stream GreetEveryOneRequest) returns ( stream GreetEveryOneResponse){};
    rpc GreetWithDeadLines(WithDeadLineRequest) returns (WithDeadLineResponse){};

}

